--- a/ProjetAirBermudes/AirBermudesClientAngular/travelsMarc/travelMinDetails.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/travelsMarc/travelMinDetails.html
@@ -1,6 +1,4 @@
 ﻿
-{{travel}}
-
 <div class="panel panel-default">
     <div class="panel-heading">
         <h3 class="panel-title" style="line-height: 34px;">
@@ -24,13 +22,21 @@
 
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
 
-            <h4>Départ :</h4>
-            <p>{{travel.DateBegin}}</p>
-            <br />
+            <div ng-if="travel.DateBegin && travel.DateEnd && !travel.NbDays">
+                <h4>Take Off :</h4>
+                <p>{{travel.DateBegin}}</p>
+                <br />
 
-            <h4>Retour :</h4>
-            <p>{{travel.DateEnd}}</p>
-            <br />
+                <h4>Arrival :</h4>
+                <p>{{travel.DateEnd}}</p>
+            </div>
+
+            <div ng-if="travel.NbDays && !travel.DateBegin && !travel.DateEnd">
+                <h4>Duration :</h4>
+                <p>{{travel.NbDays}} days</p>
+            </div>
+
+            <hr />
 
             <h4>Budget :</h4>
             <h2>{{travel.Budget}} $</h2>
