Affichage listes courses dans maps home

--- a/ProjetAirBermudes/AirBermudesClientAngular/mapService/courseMarkerPopup.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/mapService/courseMarkerPopup.html
@@ -1,6 +1,9 @@
 ﻿<div>
-
     <strong>{{transporter}}</strong><br />
-    {{transportType}}
+    {{transporttype}}<br />
+    {{address}}<br />
 
+    <a href="javascript:void(0)" ng-click="edit()">
+        edit
+    </a>
 </div>
