--- a/ProjetAirBermudes/AirBermudesClientAngular/destinations/addDestination.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/destinations/addDestination.html
@@ -14,7 +14,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">Add a new destination for this trip</div>
                 <div class="panel-body">
-                    <form ng-submit="addDestination()" class="form-group">
+                    <form ng-submit="addDestination(selecListChoices.selectedOption)" class="form-group">
 
                         <div ng-class="{'has-error' : hasErrors}">
 
@@ -29,6 +29,16 @@
 
                             <span ng-show="hasErrors" class="help-block" ng-repeat="message in errorMessages">{{message}}</span>
                         </div>
+
+                        <div class="form-group">
+                            <label for="TransportType">Choose Associated Day :</label>
+                            <select class="form-control" name="mySelect" id="mySelect"
+                                    ng-options="option.Date for option in selecListChoices.availableOptions track by option.Id"
+                                    ng-model="selecListChoices.selectedOption"></select>
+                        </div>
+                        <tt>option = {{selecListChoices.selectedOption}}</tt><br />
+                        <tt>Date = {{selecListChoices.selectedOption.Date}}</tt><br />
+
                         <br />
                         <input type="submit" class="btn btn-default" value="Add destination" />
                     </form>
