--- a/ProjetAirBermudes/AirBermudesClientAngular/destinations/day_destinationsDetails.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/destinations/day_destinationsDetails.html
@@ -1,1 +1,19 @@
-destinations for specified day
+<div class="container theme-showcase" role="main">
+    <div class="row">
+      <div ng-repeat="destination in destinations"  class="col-md-6">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">#{{destination.Position}} {{destination.Name}}</h3>
+          </div>
+            <div class="panel-body">
+              <ul class="list-group">
+                <li class="list-group-item"><strong>Type: </strong>{{destination.Type}}</li>
+                <li class="list-group-item"><strong>Name: </strong>{{destination.Name}}</li>
+                <li class="list-group-item"><strong>Address: </strong>{{destination.Address}}</li>
+              </ul>
+              <br />
+          </div>
+        </div>
+      </div>
+    </div>
+</div>
