--- a/ProjetAirBermudes/AirBermudesClientAngular/destinations/destinations.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/destinations/destinations.html
@@ -36,9 +36,8 @@
                         <td>{{dest.Type}}</td>
                         <td>{{dest.Name}}</td>
                         <td>{{dest.Address}}</td>
-                        <td><a href="javascript:void(0)" ng-click="onEdit(dest.DestinationID)">Edit</a>|
-                          <a href="javascript:void(0)" ng-click="deleteDistination(dest.DestinationID)">Delete</a>|
-                          <a href="javascript:void(0)" onClick="alert('Not implemented')">View associated day</a>
+                        <td><a href="javascript:void(0)" ng-click="onEditDestination(dest.DestinationID)">Edit</a>|
+                          <a href="javascript:void(0)" ng-click="deleteDistination(dest.DestinationID)">Delete</a>
                         </td>
                     </tr>
                 </tbody>
