See suggestions and add them to the destination list

--- a/ProjetAirBermudes/AirBermudesClientAngular/mapService/suggestionMarkerPopup.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/mapService/suggestionMarkerPopup.html
@@ -6,7 +6,7 @@
         {{address}}
     </address>
 
-    <a href="javascript:void(0)" ng-click="addToDestinations()">
+    <a href="javascript:void(0)" ng-click="addSuggestion()">
         Add <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
     </a>
 
