--- a/ProjetAirBermudes/AirBermudesClientAngular/destinations/destinations.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/destinations/destinations.html
@@ -17,7 +17,14 @@
                     <a href="#/addDestination">Create new destination</a>
                     <button class="btn btn-default" ng-click="getDestinations()">Get My destinations</button>
                 </div>
-        </div>
+            </div>
+
+            <!-- Map -->
+            <h3>Suggestions:</h3>
+            <p><strong>* Suggestions are based on the first destination, otherwise it will centered at our headquarters: Montreal, Canada</strong></p>
+            <div id="suggestions-map" style="height: 500px;"></div>
+            
+
             <!-- Table -->
             <h3 class="text-center">All your destinations for this travel</h3>
             <table class="table table-hover">
