Make in progress : link between course and travel

--- a/ProjetAirBermudes/AirBermudesClientAngular/travelsMarc/travelMinDetails.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/travelsMarc/travelMinDetails.html
@@ -41,6 +41,9 @@
             <h4>Budget :</h4>
             <h2>{{travel.Budget}} $</h2>
 
+            <h4>Courses: </h4>
+            <a href="javascript:void(0)" ng-click="onCourses(travel.TravelId)">Courses for this travel</a>
+
         </div>
 
         <div id="{{'map' + travel.TravelId}}"
