--- a/ProjetAirBermudes/AirBermudesClientAngular/days/days.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/days/days.html
@@ -26,7 +26,7 @@
                         <td>{{day.Budget}} $</td>
                         <td>
                             <a href="javascript:void(0)" ng-click="onDestinations(day)" >Destinations</a>
-                            | <a href="javascript:void(0)" ng-click="onEditDay(day.Id)" >Edit</a>
+                            | <a href="javascript:void(0)" ng-click="onEditDay(day)" >Edit</a>
                             | <a href="javascript:void(0)" ng-click="onDeleteDay(day.Id)">Delete</a>
                         </td>
                     </tr>
