--- a/ProjetAirBermudes/AirBermudesClientAngular/travelsMarc/travelMinDetails.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/travelsMarc/travelMinDetails.html
@@ -1,4 +1,4 @@
-﻿
+
 <div class="panel panel-default">
     <div class="panel-heading">
         <h3 class="panel-title" style="line-height: 34px;">
@@ -40,6 +40,8 @@
 
             <h4>Budget :</h4>
             <h2>{{travel.Budget}} $</h2>
+            <button type="button" ng-click="onClickCourses(travel)">Plan your courses</button>
+            <button type="button" ng-click="onClickDays(travel)">Plan your days</button>
 
         </div>
 
