--- a/ProjetAirBermudes/AirBermudesClientAngular/header/header.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/header/header.html
@@ -18,9 +18,9 @@
             <ul class="nav navbar-nav">
                 <li><a href="#/travels">Travels</a></li>
                 <li><a href="#/travelsmarc">TravelsMarc</a></li>
-                <li><a href="#/courses">Courses</a></li>
-                <li><a href="#/days">Days</a></li>
-                <li><a href="#/destinations">Destinations</a></li>
+                <!--<li><a href="#/courses">Courses</a></li>-->
+                <!--<li><a href="#/days">Days</a></li>-->
+                <!--<li><a href="#/destinations">Destinations</a></li>-->
                 <li><a href="#/testmaps">Test maps</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
