Clean project for releasse

--- a/ProjetAirBermudes/AirBermudesClientAngular/index.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/index.html
@@ -22,13 +22,13 @@
     <!-- ========== Modules ========== -->
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="account/account.js"></script>
-    <script type="text/javascript" src="travels/travel.js"></script>
-    <script type="text/javascript" src="travels/edit.js"></script>
+    <script type="text/javascript" src="travelsOld/travel.js"></script>
+    <script type="text/javascript" src="travelsOld/edit.js"></script>
     <script type="text/javascript" src="courses/courses.js"></script>
     <script type="text/javascript" src="days/days.js"></script>
     <script type="text/javascript" src="mapService/mapService.js"></script>
     <script type="text/javascript" src="header/header.js"></script>
-    <script type="text/javascript" src="travelsMarc/travels.js"></script>
+    <script type="text/javascript" src="travels/travels.js"></script>
     <script type="text/javascript" src="destinations/destinations.js"></script>
 
 
