Début du bouton share
Cest en developpement, mais je suis entrain de travailler sur le Share

--- a/ProjetAirBermudes/AirBermudesClientAngular/days/days.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/days/days.html
@@ -6,6 +6,7 @@
         <div class="col-md-12">
             <!-- Table -->
             <h3 class="text-center">All your days for this travel</h3>
+            <input type="text" name="userToAdd" ng-model="userToAdd" placeholder="Name of user to share travel with..." />
             <button class="btn btn-default" ng-click="onAddDay()">
                 Add day
             </button>
