--- a/ProjetAirBermudes/AirBermudesClientAngular/index.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/index.html
@@ -26,6 +26,7 @@
     <script type="text/javascript" src="travelsOld/edit.js"></script>
     <script type="text/javascript" src="courses/courses.js"></script>
     <script type="text/javascript" src="days/days.js"></script>
+    <script type="text/javascript" src="share/share.js"></script>
     <script type="text/javascript" src="mapService/mapService.js"></script>
     <script type="text/javascript" src="header/header.js"></script>
     <script type="text/javascript" src="travels/travels.js"></script>
