--- a/ProjetAirBermudes/AirBermudesClientAngular/travels/travelMinDetails.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/travels/travelMinDetails.html
@@ -5,7 +5,7 @@
 
             {{travel.Title}}
 
-            <button class="btn btn-default pull-right">
+            <button class="btn btn-default pull-right" ng-click="onClickShare(travel)">
                 <span class="glyphicon glyphicon-share"></span>
                 Share
             </button>
