--- a/ProjetAirBermudes/AirBermudesClientAngular/travels/travels.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/travels/travels.html
@@ -7,8 +7,8 @@
 </a>
 
 <div ng-if="requestError" class="alert alert-danger alert-dismissible fade in" role="alert">
-    <h4>Oh snap! You request to the server get lost in the Bermuda Triangle!</h4>
-    <p>Or perhabs the server is not open. Did you check the busines hour?</p>
+    <h4>Oh snap! Your request to the server got lost in the Bermuda Triangle!</h4>
+    <p>Or perhaps the server is not online. Did you check the working hours?</p>
     <br />
     <p style="font-size: 10px;">
         {{requestError}}
