--- a/ProjetAirBermudes/AirBermudesClientAngular/share/share.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/share/share.html
@@ -6,7 +6,7 @@
         <div class="col-md-12">
             <!-- Table -->
             <h3 class="text-center">Users that share your travel</h3>
-            <input type="text" name="userToAdd" ng-model="userToAdd" placeholder="Name of user to share travel with..." />
+            <input type="text" name="userToAdd" ng-model="userToAdd" placeholder="Name of user to share travel with..." style="width: 400px"/>
             <button class="btn btn-default" ng-click="onAddUser()">
                 Share with another user
             </button>
