--- a/ProjetAirBermudes/AirBermudesClientAngular/travels/travelMinDetails.html
+++ b/ProjetAirBermudes/AirBermudesClientAngular/travels/travelMinDetails.html
@@ -10,6 +10,8 @@
                 Share
             </button>
 
+            <!--<button class="btn btn-default" ng-click="onClickShare(travel)">SUP</button>-->
+
             <button class="btn btn-default pull-right">
                 <span class="glyphicon glyphicon-pencil"></span>
                 Edit
